[gd_scene load_steps=17 format=3 uid="uid://cb6pln7iwse2c"]

[ext_resource type="Script" path="res://Bullets/potion.gd" id="1_mcl8a"]
[ext_resource type="Texture2D" uid="uid://d0ea1xjs6y5gu" path="res://Spells/Art/Potion/idle.aseprite" id="2_fmahc"]
[ext_resource type="Texture2D" uid="uid://dt1jkuchqlt23" path="res://Spells/Art/Potion/explosion.aseprite" id="2_t1l8s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0nnv6"]
size = Vector2(59, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_eig2g"]
radius = 50.1597

[sub_resource type="AtlasTexture" id="AtlasTexture_4onwr"]
atlas = ExtResource("2_t1l8s")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu651"]
atlas = ExtResource("2_t1l8s")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q82hn"]
atlas = ExtResource("2_t1l8s")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nodkp"]
atlas = ExtResource("2_t1l8s")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_os1i8"]
atlas = ExtResource("2_t1l8s")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_capem"]
atlas = ExtResource("2_fmahc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_djy55"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4onwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu651")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q82hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nodkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os1i8")
}],
"loop": false,
"name": &"Explosion",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_capem")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_vbhjr"]
offsets = PackedFloat32Array(0, 0.25)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_etpl7"]
gradient = SubResource("Gradient_vbhjr")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_qeg5d"]
offsets = PackedFloat32Array(0, 0.430851)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1r3yp"]
gradient = SubResource("Gradient_qeg5d")
width = 40
height = 50
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Potion" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_mcl8a")

[node name="Potion" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_0nnv6")

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_eig2g")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="delete" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -1)
scale = Vector2(1.6875, 1.5625)
sprite_frames = SubResource("SpriteFrames_djy55")
animation = &"Explosion"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="Potion_light" type="PointLight2D" parent="."]
position = Vector2(0, 5)
color = Color(0.996094, 0.550781, 0.996094, 1)
texture = SubResource("GradientTexture2D_etpl7")

[node name="Explosion_light" type="PointLight2D" parent="."]
position = Vector2(-0.500015, -1)
scale = Vector2(4.79688, 2.5625)
color = Color(0.933594, 0.382813, 0.710938, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_1r3yp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="delete" to="." method="_on_delete_timeout"]
